--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 											</h1>
 											<p>A Handsome Boy </p>
 										</header>
-										<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. Pellentesque sapien ac quam. Lorem ipsum dolor sit nullam.</p>
+										<p>And I have a cute girlfriend and black bro. We have a group named KEEP WARMING for the Black want to be a warm boy.</p>
 										<ul class="actions">
 											<li><a href="#" class="button big">Learn More</a></li>
 										</ul>
