--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 											</h1>
 											<p>A Handsome Boy </p>
 										</header>
-										<p>And I have a cute girlfriend and black bro. We have a group named KEEP WARMING for the Black want to be a warm boy.</p>
+										<p>And I have a cute girlfriend and a black bro. We have a group named KEEP WARMING for the Black want to be a warm boy.</p>
 										<ul class="actions">
 											<li><a href="#" class="button big">Learn More</a></li>
 										</ul>
