--- a/index.html
+++ b/index.html
@@ -274,8 +274,9 @@ pre[data-line] .line-highlight[data-end]:after {
 <h3 class="mume-header" id="2-journal-reading">2. Journal Reading</h3>
 
 <hr>
-<h3 class="mume-header" id="3-literature-excerpts">3. Literature excerpts</h3>
+<h3 class="mume-header" id="3-literature-excerpts">3. Literature Excerpts</h3>
 
+<p><a href="https://hanchertu.github.io/chaohuaxishi.html">A</a></p>
 
       </div>
       
